Fix chatbox button alignment

--- a/src/modules/main/chat/_chatbox.scss
+++ b/src/modules/main/chat/_chatbox.scss
@@ -54,7 +54,7 @@
     .attachButton_d0696b{
         width: 32px;
         height: 32px;
-        margin: 6px 0 0 6px;
+        margin: 6px 0 6px 6px;
         border: 1px solid transparent;
         border-radius: 2px;
         &::before{
@@ -105,7 +105,7 @@
 
     // Gift/GIF/Sticker/Emoji buttons
     .expression-picker-chat-input-button{
-        margin: 6px 4px 0 0;
+        margin: 6px 4px 6px 0;
         align-items: flex-start;
         .button_dd4f85{
             height: 32px;
